# jwc-registry

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml  publish-image.yml
src/: api.rs  api_keys.rs  auth.rs  config.rs  db.rs  lib.rs  main.rs  packages.rs  storage.rs
static/: app.css  app.js  index.html
tests/: api_smoke.rs
